edit bas smells